--- a/Get_Started.ipynb
+++ b/Get_Started.ipynb
@@ -47,9 +47,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read the dataset\n",
+    "## Read the dataset\n",
     "\n",
-    "The dataset consists of 101 animals from a zoo. There are 16 variables with various traits to describe the animals. The 7 Class Types are: Mammal, Bird, Reptile, Fish, Amphibian, Bug and Invertebrate."
+    "The dataset consists of 101 animals from a zoo. There are 16 variables with various traits to describe the animals. The 7 Class Types are: Mammal, Bird, Reptile, Fish, Amphibian, Bug and Invertebrate. Let's read and shuffle the data."
    ]
   },
   {
@@ -100,8 +100,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>vole</td>\n",
+       "      <th>84</th>\n",
+       "      <td>squirrel</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -110,27 +110,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Mammal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>skimmer</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -139,11 +118,11 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Bird</td>\n",
+       "      <td>Mammal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>deer</td>\n",
+       "      <th>55</th>\n",
+       "      <td>oryx</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -163,36 +142,36 @@
        "      <td>Mammal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>wren</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <th>66</th>\n",
+       "      <td>porpoise</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Bird</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mammal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>hare</td>\n",
+       "      <th>67</th>\n",
+       "      <td>puma</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -201,7 +180,28 @@
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mammal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>lion</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Mammal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -226,71 +226,71 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>sealion</td>\n",
+       "      <th>60</th>\n",
+       "      <td>pike</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Fish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>rhea</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Mammal</td>\n",
+       "      <td>Bird</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>cavy</td>\n",
-       "      <td>1</td>\n",
+       "      <th>14</th>\n",
+       "      <td>crab</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Mammal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>scorpion</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Invertebrate</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>chub</td>\n",
+       "      <th>92</th>\n",
+       "      <td>tuna</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -306,29 +306,29 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Fish</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>hawk</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <th>51</th>\n",
+       "      <td>moth</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Bird</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bug</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -336,44 +336,44 @@
        "</div>"
       ],
       "text/plain": [
-       "    animal_name  hair  feathers  eggs  milk  airborne  aquatic  predator  \\\n",
-       "94         vole     1         0     0     1         0        0         0   \n",
-       "78      skimmer     0         1     1     0         1        1         1   \n",
-       "17         deer     1         0     0     1         0        0         0   \n",
-       "100        wren     0         1     1     0         1        0         0   \n",
-       "36         hare     1         0     0     1         0        0         0   \n",
-       "..          ...   ...       ...   ...   ...       ...      ...       ...   \n",
-       "75      sealion     1         0     0     1         0        1         1   \n",
-       "9          cavy     1         0     0     1         0        0         0   \n",
-       "72     scorpion     0         0     0     0         0        0         1   \n",
-       "12         chub     0         0     1     0         0        1         1   \n",
-       "37         hawk     0         1     1     0         1        0         1   \n",
+       "   animal_name  hair  feathers  eggs  milk  airborne  aquatic  predator  \\\n",
+       "84    squirrel     1         0     0     1         0        0         0   \n",
+       "55        oryx     1         0     0     1         0        0         0   \n",
+       "66    porpoise     0         0     0     1         0        1         1   \n",
+       "67        puma     1         0     0     1         0        0         1   \n",
+       "45        lion     1         0     0     1         0        0         1   \n",
+       "..         ...   ...       ...   ...   ...       ...      ...       ...   \n",
+       "60        pike     0         0     1     0         0        1         1   \n",
+       "71        rhea     0         1     1     0         0        0         1   \n",
+       "14        crab     0         0     1     0         0        1         1   \n",
+       "92        tuna     0         0     1     0         0        1         1   \n",
+       "51        moth     1         0     1     0         1        0         0   \n",
        "\n",
-       "     toothed  backbone  breathes  venomous  fins  legs  tail  domestic  \\\n",
-       "94         1         1         1         0     0     4     1         0   \n",
-       "78         0         1         1         0     0     2     1         0   \n",
-       "17         1         1         1         0     0     4     1         0   \n",
-       "100        0         1         1         0     0     2     1         0   \n",
-       "36         1         1         1         0     0     4     1         0   \n",
-       "..       ...       ...       ...       ...   ...   ...   ...       ...   \n",
-       "75         1         1         1         0     1     2     1         0   \n",
-       "9          1         1         1         0     0     4     0         1   \n",
-       "72         0         0         1         1     0     8     1         0   \n",
-       "12         1         1         0         0     1     0     1         0   \n",
-       "37         0         1         1         0     0     2     1         0   \n",
+       "    toothed  backbone  breathes  venomous  fins  legs  tail  domestic  \\\n",
+       "84        1         1         1         0     0     2     1         0   \n",
+       "55        1         1         1         0     0     4     1         0   \n",
+       "66        1         1         1         0     1     0     1         0   \n",
+       "67        1         1         1         0     0     4     1         0   \n",
+       "45        1         1         1         0     0     4     1         0   \n",
+       "..      ...       ...       ...       ...   ...   ...   ...       ...   \n",
+       "60        1         1         0         0     1     0     1         0   \n",
+       "71        0         1         1         0     0     2     1         0   \n",
+       "14        0         0         0         0     0     4     0         0   \n",
+       "92        1         1         0         0     1     0     1         0   \n",
+       "51        0         0         1         0     0     6     0         0   \n",
        "\n",
-       "     catsize    class_type  \n",
-       "94         0        Mammal  \n",
-       "78         0          Bird  \n",
-       "17         1        Mammal  \n",
-       "100        0          Bird  \n",
-       "36         0        Mammal  \n",
-       "..       ...           ...  \n",
-       "75         1        Mammal  \n",
-       "9          0        Mammal  \n",
-       "72         0  Invertebrate  \n",
-       "12         0          Fish  \n",
-       "37         0          Bird  \n",
+       "    catsize    class_type  \n",
+       "84        0        Mammal  \n",
+       "55        1        Mammal  \n",
+       "66        1        Mammal  \n",
+       "67        1        Mammal  \n",
+       "45        1        Mammal  \n",
+       "..      ...           ...  \n",
+       "60        1          Fish  \n",
+       "71        1          Bird  \n",
+       "14        0  Invertebrate  \n",
+       "92        1          Fish  \n",
+       "51        0           Bug  \n",
        "\n",
        "[101 rows x 18 columns]"
       ]
@@ -384,8 +384,8 @@
     }
    ],
    "source": [
-    "zoo = pd.read_csv('../../data/zoo/zoo.csv')\n",
-    "zoo = zoo.sample(frac=1, random_state=1)\n",
+    "zoo = pd.read_csv('./data/zoo/zoo.csv')\n",
+    "zoo = zoo.sample(frac=1, random_state=42)\n",
     "zoo"
    ]
   },
@@ -393,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initialize the SparseTensorClassifier\n",
+    "## Initialize SparseTensorClassifier\n",
     "\n",
     "Let's instruct STC to predict `class_type` based on all the other attributes in the dataset, except `animal_name`."
    ]
@@ -426,7 +426,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% Fitting (00:00:00.03/00:00:00.03)\r"
+      "[============================================================] 100.0% Fitting (00:00:00.04/00:00:00.04)\r"
      ]
     }
    ],
@@ -502,7 +502,7 @@
    "source": [
     "# Congratulations! \n",
     "\n",
-    "Congratulations on completing this tutorial notebook! If you enjoyed working through the tutorial, and want to continue working with SparseTensorClassifier, we encourage you to finish the rest of the tutorials in [this series](https://github.com/SparseTensorClassifier/tutorial)... and don't forget to star the repository! \n",
+    "Congratulations on completing this tutorial notebook! If you enjoyed working through the tutorial, and want to continue working with SparseTensorClassifier, we encourage you to finish the rest of the tutorials in [this series](https://github.com/SparseTensorClassifier/tutorial). Don't forget to star the repository! \n",
     "![GitHub Repo stars](https://img.shields.io/github/stars/SparseTensorClassifier/stc?style=social)\n",
     "\n",
     "Thanks by https://sparsetensorclassifier.org"
