--- a/Get_Started.ipynb
+++ b/Get_Started.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install stc pandas sklearn"
+    "# !pip install stc pandas scikit-learn"
    ]
   },
   {
@@ -503,7 +503,8 @@
     "# Congratulations! \n",
     "\n",
     "Congratulations on completing this tutorial notebook! If you enjoyed working through the tutorial, and want to continue working with SparseTensorClassifier, we encourage you to finish the rest of the tutorials in [this series](https://github.com/SparseTensorClassifier/tutorial). Don't forget to star the repository! \n",
-    "![GitHub Repo stars](https://img.shields.io/github/stars/SparseTensorClassifier/stc?style=social)\n",
+    "\n",
+    "[![GitHub Repo stars](https://img.shields.io/github/stars/SparseTensorClassifier/stc?style=social)](https://github.com/SparseTensorClassifier/stc)\n",
     "\n",
     "Thanks by https://sparsetensorclassifier.org"
    ]
