--- a/Text_Classification_20Newsgroups.ipynb
+++ b/Text_Classification_20Newsgroups.ipynb
@@ -270,7 +270,7 @@
     "- Cooperative Neural Networks: https://papers.nips.cc/paper/2018/file/051928341be67dcba03f0e04104d9047-Paper.pdf\n",
     "- Diversified Ensemble Neural Network: https://papers.nips.cc/paper/2020/file/b86e8d03fe992d1b0e19656875ee557c-Paper.pdf\n",
     "\n",
-    "The result is especially surprising when considering that the deep learning approaches are specifically tuned for the given task, involve non-trivial data pre-processing, exploit semantics, embeddings and external knowledge bases, while STC avoids any text transformation and tuning."
+    "The result is especially surprising when considering that the deep learning approaches are extensively tuned on 20Newsgroups, involve non-trivial data pre-processing, exploit semantics, embeddings and external knowledge bases, while STC avoids any text transformation and tuning."
    ]
   },
   {
