--- a/Explain_Multi_Dimension_Zoo.ipynb
+++ b/Explain_Multi_Dimension_Zoo.ipynb
@@ -7,16 +7,16 @@
     "hidePrompt": false
    },
    "source": [
-    "# Get Started with SparseTensorClassifier\n",
+    "# Explain Sparse Tensor Classifier (multiple dimensions)\n",
     "\n",
-    " Get Started with `SparseTensorClassifier` by classifying animals based upon their attributes. \n",
+    "In this tutorial you'll learn how to explain the predictions by Sparse Tensor Classifier in the case when multiple dimensions are used for the features. The algorithm provides native support for both global and local explainability, thus offering a tool for explorative data analysis and interpreting the individual predictions. \n",
     "\n",
     "\n",
     "## Colab\n",
     "\n",
-    "This tutorial and the rest in [this sequence](https://github.com/SparseTensorClassifier/tutorial) can be done in Google colab. If you'd like to open this notebook in colab, you can use the following link or click [here](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Get_Started.ipynb).\n",
+    "This tutorial and the rest in [this sequence](https://github.com/SparseTensorClassifier/tutorial) can be done in Google colab. If you'd like to open this notebook in colab, you can use the following link or click [here](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Explain_Multi_Dimension_Zoo.ipynb).\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Get_Started.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Explain_Multi_Dimension_Zoo.ipynb)\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install stc pandas scikit-learn"
+    "# !pip install stc pandas"
    ]
   },
   {
@@ -39,8 +39,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from stc import SparseTensorClassifier\n",
-    "from sklearn.metrics import accuracy_score"
+    "from stc import SparseTensorClassifier"
    ]
   },
   {
@@ -48,7 +47,6 @@
    "metadata": {},
    "source": [
     "## Read the dataset\n",
-    "\n",
     "The dataset consists of 101 animals from a zoo. There are 16 variables with various traits to describe the animals. The 7 Class Types are: Mammal, Bird, Reptile, Fish, Amphibian, Bug and Invertebrate. Let's read and shuffle the data."
    ]
   },
@@ -393,60 +391,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize SparseTensorClassifier\n",
+    "## Convert to JSON \n",
     "\n",
-    "Let's instruct STC to predict `class_type` based on all the other attributes in the dataset, except `animal_name`."
+    "Convert to JSON for a more flexible data format and illustrate the explainability for multi-valued attributes. In this example, we are going to define 2 dimensions: `d1` containing the information on the number of legs and if the animal is aquatic, and `d2` containing all the other features (except the animal name). This is an example with 2 multi-valued attribues (`d1` and `d2`) to predict `class_type`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'d1': ['legs=2', 'aquatic=0'],\n",
+       " 'd2': ['hair=1',\n",
+       "  'feathers=0',\n",
+       "  'eggs=0',\n",
+       "  'milk=1',\n",
+       "  'airborne=0',\n",
+       "  'predator=0',\n",
+       "  'toothed=1',\n",
+       "  'backbone=1',\n",
+       "  'breathes=1',\n",
+       "  'venomous=0',\n",
+       "  'fins=0',\n",
+       "  'tail=1',\n",
+       "  'domestic=0',\n",
+       "  'catsize=0'],\n",
+       " 'class_type': ['Mammal'],\n",
+       " 'animal_name': ['squirrel']}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "STC = SparseTensorClassifier(targets=['class_type'], features=zoo.columns[1:-1])"
+    "items = []\n",
+    "for i, (_, row) in enumerate(zoo.iterrows()):\n",
+    "    item = {}\n",
+    "    item['d1'] = [f+\"=\"+str(row[f]) for f in ['legs','aquatic']]\n",
+    "    item['d2'] = [f+\"=\"+str(row[f]) for f in zoo.columns[1:] if f not in ['legs','aquatic','class_type']]\n",
+    "    item['class_type'] = [row['class_type']]\n",
+    "    item['animal_name'] = [row['animal_name']]\n",
+    "    items.append(item)\n",
+    "\n",
+    "items[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fit the training data\n",
+    "## Initialize SparseTensorClassifier\n",
     "\n",
-    "Train STC on the first 70 animals in the dataset. \n",
-    "- **Note:** STC deals with **categorical** variables only. Continuous features should be discretized first. "
+    "Let's instruct STC to predict `class_type` based on `d1` and `d2`. In this example, we are going to keep the 2 multi-valued attributes in separate dimensions of the Sparse Tensor. This is obtained by setting `collapse=False` upon initialization."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[============================================================] 100.0% Fitting (00:00:00.04/00:00:00.04)\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "STC.fit(zoo[0:70])"
+    "STC = SparseTensorClassifier(targets=['class_type'], features=['d1', 'd2'], collapse=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predict the test data\n",
-    "\n",
-    "Predict the other animals. STC returns a tuple of (labels, probability, explainability):\n",
-    "- **labels:** The predicted classes. \n",
-    "- **probability:** Probability for each class.\n",
-    "- **explainability:** Contribute of each feature to the predictions.\n",
-    "\n",
-    "To save computational time, let's set `probability=False` and `explain=False`, so that only the class labels are computed.\n",
-    "- **Note:** In the prediction phase, STC considers only the `features` provided in initialization. Additional variables (including `targets`) are ignored."
+    "### Global Explaination"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fit the training data"
    ]
   },
   {
@@ -458,42 +482,324 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% Predicting (00:00:00.03/00:00:00.03)\r"
+      "[============================================================] 100.0% Fitting (00:00:00.06/00:00:00.06)\r"
      ]
     }
    ],
    "source": [
-    "labels, _, _ = STC.predict(zoo[70:], probability=False, explain=False)"
+    "STC.fit(items[0:70])"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
+   "metadata": {},
    "source": [
-    "## Evaluation"
+    "Let's now understand the global model structure. This is achieved by the function `explain()`. The function returns a table with the scores associated to each feature (note: each feature is now represented in a 2 dimensional space), with respect to each target class label."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = STC.explain()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For example, which are the most relevant features to predict `Mammal`? \n",
+    "1. It is not `aquatic` and gives `milk`\n",
+    "2. It has 4 `legs` and does not lay `eggs`\n",
+    "3. It has 4 `legs` and has `hair`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>d1</th>\n",
+       "      <th>d2</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>class_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Mammal</th>\n",
+       "      <td>aquatic=0</td>\n",
+       "      <td>milk=1</td>\n",
+       "      <td>0.183166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mammal</th>\n",
+       "      <td>legs=4</td>\n",
+       "      <td>eggs=0</td>\n",
+       "      <td>0.170941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mammal</th>\n",
+       "      <td>legs=4</td>\n",
+       "      <td>milk=1</td>\n",
+       "      <td>0.170941</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.967741935483871"
+       "                   d1      d2     score\n",
+       "class_type                             \n",
+       "Mammal      aquatic=0  milk=1  0.183166\n",
+       "Mammal         legs=4  eggs=0  0.170941\n",
+       "Mammal         legs=4  milk=1  0.170941"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(zoo['class_type'][70:], labels)"
+    "e.loc[\"Mammal\"][0:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Local Explaination"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now turn our attention to local explainability and explain the predictions for each predicted animal. The function `predict` returns a tuple of labels, probabilities, and explainability scores. Make sure to define some policy to avoid degenerate probability estimates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[============================================================] 100.0% Predicting (00:00:00.03/00:00:00.03)\r"
+     ]
+    }
+   ],
+   "source": [
+    "test = items[70:]\n",
+    "labels, probability, explainability = STC.predict(test, policy=[['d1','d2'], ['d2'], []])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's consider item 24: a [sole (fish)](https://en.wikipedia.org/wiki/Sole_(fish))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sole'] ['Fish']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test[24]['animal_name'], test[24]['class_type'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which is the predicted class? $\\rightarrow$ `Fish`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class_type    Fish\n",
+       "Name: 24, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels.loc[24]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which is the probability of the predicted class? $\\rightarrow$ The probability of `Fish` is `0.67`, pretty high with respect to the other classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class_type\n",
+       "Amphibian       0.043673\n",
+       "Bird            0.007436\n",
+       "Bug             0.000000\n",
+       "Fish            0.671736\n",
+       "Invertebrate    0.101347\n",
+       "Mammal          0.018671\n",
+       "Reptile         0.157138\n",
+       "Name: 24, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probability.loc[24]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why is the model predicting `Fish`? Let's take the top 3 features: \n",
+    "1. The animal is `aquatic` and has `fins`\n",
+    "2. The animal has no `legs` and has `fins`\n",
+    "3. The animal has no `legs` and is not `venomous`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>d1</th>\n",
+       "      <th>d2</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>item</th>\n",
+       "      <th>class_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">24</th>\n",
+       "      <th>Fish</th>\n",
+       "      <td>aquatic=1</td>\n",
+       "      <td>fins=1</td>\n",
+       "      <td>0.031694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fish</th>\n",
+       "      <td>legs=0</td>\n",
+       "      <td>fins=1</td>\n",
+       "      <td>0.031694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fish</th>\n",
+       "      <td>legs=0</td>\n",
+       "      <td>venomous=0</td>\n",
+       "      <td>0.023061</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        d1          d2     score\n",
+       "item class_type                                 \n",
+       "24   Fish        aquatic=1      fins=1  0.031694\n",
+       "     Fish           legs=0      fins=1  0.031694\n",
+       "     Fish           legs=0  venomous=0  0.023061"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "explainability.loc[(24,'Fish')][0:3]"
    ]
   },
   {
