--- a/Text_Classification_20Newsgroups.ipynb
+++ b/Text_Classification_20Newsgroups.ipynb
@@ -261,16 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Print evaluation metrics\n",
-    "\n",
-    "STC achieves state-of-the-art performances comparable to other deep learning approaches proposed in literature:\n",
-    "\n",
-    "- TextEnt: https://www.aclweb.org/anthology/C18-1016.pdf\n",
-    "- Neural Attentive Bag-of-Entities Model: https://www.aclweb.org/anthology/K19-1052.pdf\n",
-    "- Cooperative Neural Networks: https://papers.nips.cc/paper/2018/file/051928341be67dcba03f0e04104d9047-Paper.pdf\n",
-    "- Diversified Ensemble Neural Network: https://papers.nips.cc/paper/2020/file/b86e8d03fe992d1b0e19656875ee557c-Paper.pdf\n",
-    "\n",
-    "The result is especially surprising when considering that the deep learning approaches are extensively tuned on 20Newsgroups, involve non-trivial data pre-processing, exploit semantics, embeddings and external knowledge bases, while STC avoids any text transformation and tuning."
+    "## Print evaluation metrics"
    ]
   },
   {
@@ -459,6 +450,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "STC achieves state-of-the-art performance on 20Newsgroups, comparable to other deep learning approaches proposed in literature for text classification:\n",
+    "\n",
+    "- TextEnt: https://www.aclweb.org/anthology/C18-1016.pdf\n",
+    "- Neural Attentive Bag-of-Entities Model: https://www.aclweb.org/anthology/K19-1052.pdf\n",
+    "- Cooperative Neural Networks: https://papers.nips.cc/paper/2018/file/051928341be67dcba03f0e04104d9047-Paper.pdf\n",
+    "- Diversified Ensemble Neural Network: https://papers.nips.cc/paper/2020/file/b86e8d03fe992d1b0e19656875ee557c-Paper.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Congratulations! \n",
     "\n",
     "Congratulations on completing this tutorial notebook! If you enjoyed working through the tutorial, and want to continue working with SparseTensorClassifier, we encourage you to finish the rest of the tutorials in [this series](https://github.com/SparseTensorClassifier/tutorial). Don't forget to star the [repository](https://github.com/SparseTensorClassifier/stc)! \n",
@@ -485,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
